@@ -12,7 +12,7 @@ dnl ############# Initialisation
 AC_INIT([mpg123], [1.14.0], [mpg123-devel@lists.sourceforge.net])
 dnl Increment API_VERSION when the API gets changes (new functions).
 API_VERSION=34
-LIB_PATCHLEVEL=2
+LIB_PATCHLEVEL=3
 dnl Since we want to be backwards compatible, both sides get set to API_VERSION.
 LIBMPG123_VERSION=$API_VERSION:$LIB_PATCHLEVEL:$API_VERSION
 AC_SUBST(LIBMPG123_VERSION)
